[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/BossRooms/MaidenBossRoom/shockwave.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/MaidenBoss/MaidenShockwave.gd" type="Script" id=2]
[ext_resource path="res://Assets/MusicAndSounds/MotherMaiden/fire-magic-6947.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 24 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.342045 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[node name="MaidenShockwave" type="RigidBody2D"]
collision_layer = 16
collision_mask = 2
mass = 65535.0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -19 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7, -24 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -7, -23 )
rect = Rect2( -10, -10, 20, -50 )

[node name="TrailParticle" type="Particles2D" parent="."]
position = Vector2( 0, -18 )
amount = 20
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -4, -1 )
stream = ExtResource( 3 )
volume_db = -25.0
pitch_scale = 0.4
autoplay = true
bus = "ReverbSFX"

[connection signal="body_entered" from="." to="." method="_on_MaidenShockwave_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
